# anon-msg-automator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: main.py  switcher.py
src/AnonAutomator_arin17/: __main__.py  modules.py
src/AnonAutomator_arin17/resources/: messages.json
src/NGL/: NGL.py
src/SecretM/: SecretM.py
src/SecretMessage/: SecretMessage.py
src/StoryZInk/: StoryZInkAutomator.py
src/base/: BaseMessageAutomator.py
src/resources/: sample_messages.json
