[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AnonAutomator_arin17"
version = "0.0.1"
authors = [
    { name = "Bishwajit Ghosh", email = "arin17bishwa@gmail.com" },
]
description = "A small test package for automated anonymous messaging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/arin17bishwa/anon-msg-automator"
"Bug Tracker" = "https://github.com/arin17bishwa/anon-msg-automator/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]